--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -389,6 +389,105 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "gdL9KBctgfwx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "  G = Generator(opt)\n",
+        "  D = Discriminator(opt)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BjWepdmMglhS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 306
+        },
+        "outputId": "8c32250d-43bd-4f07-dcf9-83ba31ff27e7"
+      },
+      "source": [
+        "G"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Generator(\n",
+              "  (model): Sequential(\n",
+              "    (0): Linear(in_features=100, out_features=128, bias=True)\n",
+              "    (1): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+              "    (2): Linear(in_features=128, out_features=256, bias=True)\n",
+              "    (3): BatchNorm1d(256, eps=0.8, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (4): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+              "    (5): Linear(in_features=256, out_features=512, bias=True)\n",
+              "    (6): BatchNorm1d(512, eps=0.8, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (7): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+              "    (8): Linear(in_features=512, out_features=1024, bias=True)\n",
+              "    (9): BatchNorm1d(1024, eps=0.8, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (10): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+              "    (11): Linear(in_features=1024, out_features=102400, bias=True)\n",
+              "    (12): Tanh()\n",
+              "  )\n",
+              ")"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ksdMVXnvgl5n",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "8145b694-6dba-46c6-caf5-1935b52f9c15"
+      },
+      "source": [
+        "D"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Discriminator(\n",
+              "  (model): Sequential(\n",
+              "    (0): Linear(in_features=102400, out_features=512, bias=True)\n",
+              "    (1): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+              "    (2): Linear(in_features=512, out_features=256, bias=True)\n",
+              "    (3): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+              "    (4): Linear(in_features=256, out_features=1, bias=True)\n",
+              "    (5): Sigmoid()\n",
+              "  )\n",
+              ")"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "0nibialKkY2G",
         "colab_type": "code",
         "colab": {
